Fix zencoins section mobile css.

--- a/zenctuary-theme-starter/assets/css/components.css
+++ b/zenctuary-theme-starter/assets/css/components.css
@@ -736,6 +736,12 @@ input[type="checkbox"] {
   }
 
   /* Zencoin Mobile Adjustments */
+  .zen-zencoin-title-group.is-layout-flex {
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+  }
+
   .zen-coin-icon {
     width: 28px;
     height: 28px;
